# SalesTracker

./: Cargo.toml  Dockerfile  README.md  app.env  db.env  docker-compose.yml  entrypoint.sh  sample_data.csv
.sqlx/: query-1972b07f5d5ff1a198549d540f810ad024e15dfb537bd9607e6888c6920163f9.json  query-1e9ba96dd02c6ac44813116d83a3073fb1be8aac13d878915d3c064e1702a4a4.json  query-738db0f81a6c059e32bd8b397f0fc11479e49853b885d372aba19b7ee1417a48.json  query-8e1bbb040c765a18eebc7bd5cf8619787af5a55c61c14b406aa8eac53733e726.json  query-db8be5488c65d58203265b1bb6dcfcbf74bf9839f74b2dfb0eb4a54ff636ba03.json  query-e27aec5fff37a7e2d30d5fb716d2d438e129ff13e38bb0956b42a725a79a1213.json
migrations/: 20250222165834_create_customers_table.sql  20250222165859_create_products_table.sql  20250222165905_create_orders_table.sql  20250222165922_create_order_items_table.sql  20250222165947_create_regions_table.sql  20250222170000_create_order_regions_table.sql
src/: main.rs
src/api/: health_check.rs  hello.rs  mod.rs  refresh.rs  revenue.rs  revenue_category.rs  revenue_product.rs  revenue_region.rs  revenue_total.rs
src/config/: app.rs  db.rs  logger.rs  mod.rs
src/scripts/: lib.rs  load_csv.rs  mod.rs
