[package]
name = "sales_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
csv = {version="1.3.1"}
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version="1.0.218", features=["derive"]}
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio = { version="1.43.0", features=["full"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "bigdecimal", "time", "rust_decimal"]
